<resources>
    <string-array name="categories">
        <item>Entrada</item>
        <item>Menú</item>
        <item>Bebidas</item>
        <item>Postres</item>
    </string-array>
    
    <string name="app_name">CoffeeTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">marco_Atencio@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_QR">QR</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Salir</string>


    <string name="menu_product">Productos</string>
    <string name="menu_user">Usuarios</string>
    <string name="menu_sales">Ventas</string>

    <!--Button-->
    <string name="btnLogin">Ingresar</string>
    <string name="btnSave">Guardar</string>
    <string name="btnStart">Empezar</string>
    <string name="btnPay">Pagar con tarjeta</string>
    <string name="btnPagar">Pagar</string>
    <string name="btnPaypal">Pagar con Paypal</string>
    <string name="btnRegistrar">Registrar</string>

    <!--Inputs-->
    <string name="emailHint">Usuario o Correo electrónico</string>
    <string name="passwordHint">Contraseña</string>

    <!--MainActivity2-->
    <string name="txtTitle">Bienvenido a CoffeeTime</string>
    <string name="txtAdmin">Bienvenido al área administrativa</string>
    <string name="txtParagraph">Nunca es tarde para tomarse un cafe</string>
    <string name="txtTitleAdmin">Sesión Administrador</string>
    <string name="txtParagraphAdmin">Es momento  de inspeccionar nuestros productos</string>
    <string name="txtParagraph1">Conjunto de pequeños trozos de carne condimentados y ensartados en una caña o palo, que se cocinan asados o fritos; se suele vender por las calles.</string>
    <string name="txtParagraph2">Porciones  3</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtLogInCheck">Already have an account ?</string>

    <!--MainActivity3-->
    <string name="txtTitleLogin">Welcome Back !</string>
    <string name="cornerBtn">38dp</string>
    <string name="txtLogin">Iniciar Sesión</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="txtUsuario">Usuario o Correo electronico</string>
    <string name="txtOlvidado">¿No cuenta con un correo?</string>
    <string name="txtUsuarioBar">Nombre del Usuario</string>
    <string name="txtCorreo">usuario@hotmail.com</string>
    <string name="titleSignUp">Registrar</string>
    <string name="txtContraseña">Contraseña</string>

    <!--Shopping Cart-->
    <string name="titleCart">Tu carrito</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtDescuento">Descuento</string>
    <string name="txtLaCarta">La Carta</string>
    <string name="txtRecomendacionesparati">Nuestro Productos</string>
    <string name="txtMenu1">Menu</string>
    <string name="txtMenu2">Comida Rapida</string>
    <string name="txtMenu3">Postre</string>
    <string name="txtMenu4">Bebidas</string>
    <string name="txtMenu5">Segundo</string>
    <string name="txtMenu6">Ají de Gallina</string>
    <string name="txtMenu7">Anticuchos</string>
    <string name="txtMenu8">Ensalada</string>
    <string name="txtMenu9">Brochetas</string>
    <string name="txtMenu10">2 artículos en tu carrito</string>
    <string name="txtMenu11">Total</string>
    <string name="txtMenu12">S/.32.80</string>
    <string name="txtDescuento1">-10 %</string>
    <string name="txtTotal">Total</string>
    <string name="priceBrocheta">S/18.07</string>
    <string name="priceSubtotal">S/40.87</string>
    <string name="priceDescuento">S/8.07</string>
    <string name="priceTotal">S/32.80</string>
    <string name="txtUsuario1">Marco Antonio Atencio Maravi</string>
    <string name="txtCodigoQr">Usa tu código QR para recoger tu pedido</string>
</resources>