<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    tools:context=".ui.WelcomeActivity"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/ic_coffetime"
        />

    <TextView
        android:id="@+id/tv_welcomeUser"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textColor="@color/fontTitle"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/txt_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtParagraph"
        android:textColor="@color/fontSecondary"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_Start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn_round"

        android:onClick="Home"
        android:text="@string/btnStart"
        android:textColor="@color/fontPrimary"
        app:backgroundTint="@color/primary" />

</LinearLayout>