<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.pay.PayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageViewPay"
            android:layout_width="400dp"
            android:layout_height="122dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_coffetime" />

    </LinearLayout>

    <TextView
        android:id="@+id/titlePay"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtMenu10"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/fontTitle"
        android:textSize="27sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/titleCart2"
            android:layout_width="211dp"
            android:layout_height="33dp"
            android:fontFamily="@font/grotesk_medium"
            android:text="@string/txtMenu11"
            android:textAlignment="center"
            android:textColor="@color/fontTitle"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pricePay"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:fontFamily="@font/grotesk_medium"
            android:text="@string/txtMenu12"
            android:textAlignment="center"
            android:textColor="@color/fontTitle"
            android:textSize="22sp"
            android:textStyle="normal" />

    </LinearLayout>


    <Button
        android:id="@+id/btnPayPal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_round"
        android:onClick="saveSale"
        android:text="Pagar"
        android:textAllCaps="false"
        android:textColor="@color/fontPrimary"
        android:textSize="16sp"
        app:backgroundTint="@color/primary" />

</LinearLayout>